duvbox.css
//META{"name":"Duvbox","description":"A Discord theme based on Gruvbox, a Vim theme","author":"CircuitRCAY","version":"1.2.0"}*//
/**
    Duvbox - adapted for Discord
    
    Made by CircuitRCAY (Circuit#2816)
*/

/* Iosevka, codeblock font */

@import url("https://typeof.net/Iosevka/fonts.css");

code {
    font-family: "Iosevka Web", monospace;
    font-weight: 600;
}

/** End Iosevka */

.theme-dark {
    --background-primary: #282828;
    --background-secondary: #3c3836;
    --background-tertiary: #504945;
    --background-accent: #32302f;
    --text-normal: #ebdbb2;
    --text-spotify: #fbf1c7;
    --text-muted: #bdae93;
    --text-link: #458588;
    --background-floating: #3c3836;
    --header-primary: #ebdbb2;
    --header-secondary: #bdae93;
    --header-spotify: #b8bb26;
    --interactive-normal: #ebdbb2;
    --interactive-hover: #bdae93;
    --interactive-active: #fbf1c7;
}

.theme-light {
    --background-primary: #fbf1c7;
    --background-secondary: #ebdbb2;
    --background-tertiary: #d5c4a1;
    --background-accent: #f2e5bc;
    --text-normal: #3c3836;
    --text-muted: #504945;
    --text-link: #076678;
    --header-primary: #3c3836;
    --header-secondary: #504945;
    --header-spotify: #98971a;
    --background-floating: #ebdbb2;
    --interactive-normal: #665c54;
    --interactive-muted: #928374;
    --interactive-hover: #504945;
    --interactive-active: #7c6f64;
}

::-webkit-scrollbar,
::-webkit-scrollbar-track,
::-webkit-scrollbar-track-piece {
    background: transparent !important;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
    border: none !important;
    width:5px !important;
}
::-webkit-scrollbar-thumb {
    background: var(--background-secondary) !important;
    width:5px !important;
    border:none !important;
    border-radius: 0px !important;
}

/* Guild menu (discord forces light theme) */
div[class*="wrapper"][class*="fixClipping"]{
    background-color: var(--background-secondary);
}

/* New Messages Bar */
div[class*="newMessagesBar"] {
    background-color: var(--background-secondary);
}

/* Hide the action bar nametag and status */
section > div[class*="container"] > [class*='nameTag-'] {
    display:none;
}

/* Center buttons in the panels container */
div[class*="sidebar"] > [class*='panels-'] [class*='container-']{
    display:flex;
    flex-flow:row wrap;
    justify-content: center;
}

/* Credit to craftxbox */

/* Mentions (channel, user) */
span[class*="mention"][class*="interactive"] {
    color: var(--text-link);
}

/* Mentions (role) */
span[class*="mention"] {
    color: var(--text-link);
}

div[class^="scrollableContainer"] {
    background-color: var(--background-secondary);
}

div[class^="name"] > span {
    color: var(--text-normal);
}

h1, h2, h3 {
    color: var(--text-normal);
}

h3[class^="title"] {
    color: var(--text-normal);
}

div[class^="panels"] > div[class^="container"] {
    background-color: var(--background-secondary);
}

section[class^="panels"] > div[class^="container"] > div[class^="nameTag"] > * {
    color: var(--text-normal);
}

section[class^="panels"] > div[class^="container"] {
    background-color: var(--background-secondary);
}

div.userSettingsAccount-2eMFVR > div > div {
    background-color: var(--background-primary);
}

* > div[class^="contents"] {
    color: var(--text-normal)
}

div[class^="size14"] {
    color: var(--text-normal);
}

div[class^="topic"] {
    color: var(--text-muted);
}

div[class^="friendsTable"] {
    background-color: var(--background-primary);
}

[class^="input"] {
    background-color: var(--background-primary);
}

div[class^="uploadModal"] > div[class^="inner"], div[class^="inner"] > div[class^="uploadModal"], div[class^="uploadModal"] > div[class^="footer"] {
    background-color: var(--background-primary);
}

[class^="usernameContainer"]:not([style]){
    color: var(--text-normal)
}

div[class^="username"] {
    background-color: inherit;
}

span[class^="wrapperHover"][role="button"] {
    color: var(--text-link)
}

[class^="autocompleteInner"] {
    background-color: var(--background-secondary)
}


a[class^="wrapper"] {
    color: var(--text-normal)
}

[class^="tooltipRight"] {
    color: var(--text-normal)
}

div[role="dialog"] {
    color: var(--background-primary)
}

div[class*="activityPanel"] {
    background-color: var(--background-secondary)
}

div[class^="text"] {
    color: var(--text-normal)
}

div[class^="side"] > div[class^="item"] {
    background-color: var(--background-secondary)
}

[class^="userInfoViewing"] {
    background-color: var(--background-secondary);
}

[class*="lookFilled"][class*="colorBrand"] {
    background-color: var(--text-link);
}

div[class*="tooltip"] {
    background-color: var(--background-secondary);
}
div[class*="contextMenu"] {
    background-color: var(--background-secondary);
}

div[class*="header"] {
    background-color: var(--background-secondary)
}

div[class*="details"] {
    color: var(--text-normal);
}

div[class*="headerTextNormal"] {
    background-color: var(--background-secondary);
}

span {
    color: var(--text-normal)
}

span[class*="headerName"] {
    color: var(--text-normal)
}

div[class*="userPopout"] > div[class*="footer"] {
    background-color: var(--background-primary)
}

div[class*="scrollerWrap"][class*="body"] > div[class*="scroller"] {
    background-color: var(--background-primary)
}

[class*="footer"] > [class*="quickMessage"] {
    background-color: var(--background-primary)
}

div[class^="topSectionPlaying"] > header[class^="header"] {
    background-color: var(--background-secondary);
}

header[class^="title"] {
    color: var(--text-normal)
}

div[class^="tabBody"] {
    background-color: var(--background-primary);
}

div[class^="topSectionNormal"] > header > div[class^="headerInfo"]{
    background-color: inherit;
}

div[class^="topSectionSpotify"] > header > div[class^="headerInfo"]{
    background-color: inherit;
}
/* ... */

